// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget renders div wrapper 1`] = `
<div>
  <span class="k">v</span>
</div>
`;

exports[`Widget renders backtick and interpolation 1`] = `
<div>
  <code>\`escaped\` and \${interpolated}</code>
</div>
`;

exports[`Widget \`quoted\` name 1`] = `
<div>
  <span class="k">quoted-key</span>
</div>
`;

exports[`Widget mentions a fake entry 1`] = `
<div>
  <code>exports[\`not a real key\`] = \`still just text\`;</code>
</div>
`;
